# camera

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Requirements-nonPi.txt  Requirements.txt  setup.py
VolteraCalibrationFitting/: CMakeLists.txt
VolteraCalibrationFitting/include/VolteraCalibrationFitting/: Intrinsics.h  LaserExtrinsics.h  LaserReprojectionError.h  LoadCSV.h  PreviewResiduals.h  SinglePointResidual.h
VolteraCalibrationFitting/src/: Intrinsics.cpp  LaserExtrinsics.cpp  LoadCSV.cpp  PreviewResiduals.cpp  intrinsics_fitting_main.cpp
VolteraCalibrationFitting/test/: test_path.h.in
VolteraCalibrationFitting/test/test_data/: test2.csv
VolteraCppTools/: CMakeLists.txt  IntrinsicsGuess.csv
VolteraCppTools/include/VolteraCppTools/: AnalysisImage.h  Intrinsics.h  LaserExtrinsics.h  LaserReprojectionError.h  PreviewResiduals.h  ReprojectionError.h
VolteraCppTools/src/: AnalysisImage.cpp  Intrinsics.cpp  LaserExtrinsics.cpp  LoadCSV.cpp  PreviewResiduals.cpp  VolteraCppToolsPythonBindings.cpp  VolteraCppToolsPythonsBindings.cpp  intrinsics_fitting_main.cpp
VolteraCppTools/test/: testLineFinder.cpp  testLoadCSV.cpp
VolteraCppTools/test/test_data/: IntrinsicsPoints.csv  LaserPoints.csv  test1.csv
docs/: Makefile
docs/WorkBooks/CalibrationPreview/: StagedCalibrationPreview.ipynb  intrinsics.json
docs/WorkBooks/IntrinsicsCalibration/: IntrinsicsCalculation.ipynb  MotionBasedCalibration.ipynb  TranslationCalibration.ipynb
docs/WorkBooks/LaserPlaneDetermination/: LaserPlaneDetermination.ipynb
docs/WorkBooks/Specs/: Specifications.ipynb
docs/source/: conf.py  index.rst  install.rst  modules.rst  rest_api.rst  spi.rst  volteracamera.analysis.rst  volteracamera.calibration_tool.api.rst  volteracamera.calibration_tool.rst  volteracamera.control.rst  volteracamera.intrinsics.rst  volteracamera.rst  volteracamera.web_server.api.rst  volteracamera.web_server.rst
instance/: camera.json  laser.json
tests/: XYZTranalationIntrinsics_test.py  analysis_test.py  intrinsics_test.py  line_test.py  plane_test.py  screen_calibration_test.py  transform_test.py  undistort_test.py  xyz_translation_intrinsics_test.py
volteracamera/: __init__.py  capture_laser_data.py  preview_laser_data.py  run_camera.py  run_intrinsics.py  run_laser_cal.py
volteracamera/analysis/: laser_fitter.py  laser_line_finder.py  line.py  plane.py  point_extractor.py  point_projector.py  transform.py  undistort.py
volteracamera/calibration_tool/: __init__.py  views.py
volteracamera/calibration_tool/api/: __init__.py  camera_processing.py  laser_processing.py
volteracamera/calibration_tool/static/: calibration_tool.js  style.css
volteracamera/calibration_tool/templates/: base.html  index.html
volteracamera/control/: camera.py  laser.py  line.py
volteracamera/intrinsics/: __init__.py  calibration_generation.py  charuco_calibration.py  circles_calibration.py  screen_based_calibration.py  stage_calibration.py  visualization.py
volteracamera/web_server/: __init__.py  app.py  calibration.py  controls.py  data_model.py  viewer.py
volteracamera/web_server/api/: __init__.py  calibration.py  laser_control.py  sensor_control.py
volteracamera/web_server/static/: cam_preview.js  controls.js  image_sidebar.js  point_cloud_viewer.js  style.css
volteracamera/web_server/templates/: base.html  index.html
volteracamera/web_server/templates/calibration/: index.html  intrinsics.html
volteracamera/web_server/templates/controls/: controls.html  preview.html
volteracamera/web_server/templates/viewer/: index.html  viewer.html
